[package]
name = "advent"
version = "0.1.0"
authors = ["Michael Mokrysz <hi@46b.it>"]

[dependencies]
# PATH="/usr/local/Cellar/llvm/5.0.1/bin:$PATH"
llvm-sys = "50"

[dependencies.nom]
#git = "https://github.com/Geal/nom.git"
version = "3.2.1"
#features = ["nightly", "verbose-errors"]

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3.20"
